log
Thu Apr  7 11:13:17 HSP 2022: 
 tests:  0|6
total_score: 0/70
37667a7
Thu Apr  7 11:30:03 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
4a94d51
Thu Apr  7 11:31:27 HSP 2022: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c0f7c18
Thu Apr  7 11:32:18 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
afe935d
Thu Apr  7 11:33:33 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
a1bccc9
Thu Apr  7 11:34:07 HSP 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
32e18f7
Thu Apr  7 11:34:45 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5111701
Thu Apr  7 11:34:56 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
e88836f
Thu Apr  7 11:35:03 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ddab1bc
Thu Apr  7 11:38:34 HSP 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:11: error: unused variable 'newElement' [-Werror=unused-variable]
     Pair *newElement = createPair(key, value);
           ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
19b2389
Thu Apr  7 11:42:19 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:45:10: error: unused variable 'index' [-Werror=unused-variable]
     long index = hash(key, map->capacity);
          ^~~~~
hashmap.c:44:11: error: unused variable 'newElement' [-Werror=unused-variable]
     Pair *newElement = createPair(key, value);
           ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9d7c3b7
Thu Apr  7 11:58:01 HSP 2022: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:48:27: error: passing argument 2 of 'is_equal' makes pointer from integer without a cast [-Werror=int-conversion]
         if (is_equal(key, hashFunction) == 1) return;
                           ^~~~~~~~~~~~
hashmap.c:35:5: note: expected 'void *' but argument is of type 'long int'
 int is_equal(void* key1, void* key2){
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3e296b5
Thu Apr  7 11:58:49 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
159856a
Thu Apr  7 11:59:52 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
d64b3a6
Thu Apr  7 12:00:30 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
3dc2e07
Thu Apr  7 12:02:56 HSP 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:85:10: error: unused variable 'hashFunction' [-Werror=unused-variable]
     long hashFunction = hash(key, map->capacity);
          ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a5c48d0
Thu Apr  7 12:03:01 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e9b99b6
Thu Apr  7 12:04:30 HSP 2022: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 30/70
5d78445
Thu Apr  7 12:04:47 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e83ad7a
Thu Apr  7 12:10:17 HSP 2022: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function 'searchMap':
hashmap.c:98:20: error: 'searchedElement' may be used uninitialized in this function [-Werror=maybe-uninitialized]
             return searchedElement;
                    ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
627ca19
Thu Apr  7 12:12:06 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
d8a519c
Thu Apr  7 12:13:23 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
963e313
Thu Apr  7 12:16:30 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
2fee13f
Thu Apr  7 12:18:15 HSP 2022: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:87:10: error: unused variable 'hashFunction' [-Werror=unused-variable]
     long hashFunction = hash(key, map->capacity);
          ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dde8806
Thu Apr  7 12:19:27 HSP 2022: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  11|2
total_score: 50/70
c54b988
Thu Apr  7 15:04:51 HSP 2022: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  12|2
total_score: 50/70
1bf65d4
Thu Apr  7 15:05:25 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:125:9: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
         if (map->buckets[i] != NULL && map->buckets[i]->key != NULL)
         ^~
hashmap.c:127:13: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
             return map->buckets[i];
             ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4c7d423
Thu Apr  7 15:05:36 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|2
total_score: 50/70
d64f6e4
Thu Apr  7 15:06:40 HSP 2022: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  13|2
total_score: 50/70
e42e6ef
Thu Apr  7 15:08:38 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0266761
Thu Apr  7 15:09:07 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
06bb946
Thu Apr  7 15:13:19 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:65:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair **auxMap = map;
                     ^~~
hashmap.c:65:12: error: unused variable 'auxMap' [-Werror=unused-variable]
     Pair **auxMap = map;
            ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
23366e9
Thu Apr  7 15:20:46 HSP 2022: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
a9701d0
Thu Apr  7 15:21:22 HSP 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
cc45d7e
Thu Apr  7 15:23:33 HSP 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
944600b
Thu Apr  7 15:27:57 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
207d3c1
Thu Apr  7 15:28:19 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3749884
Thu Apr  7 15:32:12 HSP 2022: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:66:26: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     long **oldCapacity = map->capacity;
                          ^~~
hashmap.c:77:23: error: comparison between pointer and integer [-Werror]
     for (int i = 0; i < oldCapacity; i++)
                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
fa6c908
Thu Apr  7 15:32:26 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
30de738
Thu Apr  7 15:32:59 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f165c9c
Thu Apr  7 15:42:23 HSP 2022: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
8fda261
Thu Apr  7 15:42:57 HSP 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6eff852
Thu Apr  7 15:45:49 HSP 2022: 
 hashmap.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  0|0
0a6ea2a
Thu Apr  7 15:46:28 HSP 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
2e8b055
